# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-Job_Scheduler_Env"
version = "0.1.0"
description = "Job Scheduler Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "unsloth[base] @ git+https://github.com/unslothai/unsloth.git",
    "unsloth_zoo[base] @ git+https://github.com/unslothai/unsloth-zoo.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m Job_Scheduler_Env.server.app
server = "Job_Scheduler_Env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["Job_Scheduler_Env", "Job_Scheduler_Env.server"]
package-dir = { "Job_Scheduler_Env" = ".", "Job_Scheduler_Env.server" = "server" }

[tool.setuptools.package-data]
"Job_Scheduler_Env.server" = ["static/*.html"]
